--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/mrs
-spring.datasource.username=mrs
-spring.datasource.password=mrs
+spring.datasource.url=jdbc:postgresql://${hostname}/${dbname}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
