Heroku用設定＆チェック処理追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://${hostname}/${dbname}?sslmode=require
+spring.datasource.url=jdbc:postgresql://${hostname}/${dbname}?sslmode=${sslmode}
 spring.datasource.username=${username}
 spring.datasource.password=${password}
 #spring.jpa.hibernate.ddl-auto=update
