エラー時処理変更

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -7,9 +7,11 @@ mrs.app.validation.UserId.message=ユーザIDが正しくありません。
 mrs.app.validation.Password.message=パスワードが正しくありません。
 mrs.app.validation.ThirtyMinutesUnit.message=30分単位で入力してください。
 mrs.app.validation.EndTimeMustBeAfterStartTime.message=終了時刻は開始時刻より後にしてください。
+mrs.app.validation.DateInputFormat.message={0}は日付として許可された形式ではありません。
 
 #フィールド名
 userId=ユーザID
 password=パスワード
 firstName=姓
 lastName=名
+reservedDate=予約日
