フィールドインジェクションからコンストラクタインジェクションに変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,30 @@
+# ===================================================================
+# APPLICATION PROPERTIES
+# ===================================================================
 
+# ----------------------------------------
+# CORE PROPERTIES
+# ----------------------------------------
+# LOGGING
+logging.level.jdbc=OFF
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# THYMELEAF (ThymeleafAutoConfiguration)
+spring.thymeleaf.cache=false
+
+# ----------------------------------------
+# DATA PROPERTIES
+# ----------------------------------------
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://${hostname}/${dbname}?sslmode=${sslmode}
 spring.datasource.username=${username}
 spring.datasource.password=${password}
+spring.datasource.sql-script-encoding=UTF-8
+#spring.datasource.initialization-mode=always
+
+# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.sql-script-encoding=UTF-8
-#spring.datasource.initialization-mode=always
-logging.level.jdbc=OFF
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
